feat: fix doc api.yaml / swagger
